--- a/CollaB/pom.xml
+++ b/CollaB/pom.xml
@@ -103,6 +103,12 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.4</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.5</version>
+		</dependency>
 
 		<!-- Websocket -->
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-websocket -->
