--- a/CollaB/pom.xml
+++ b/CollaB/pom.xml
@@ -297,6 +297,10 @@
 		</dependency>
 	</dependencies>
 	<build>
+		
+		<resources> <resource> <directory>src/main/resources</directory> </resource> <resource> <directory>src/main/java</directory> <includes> <include>**/*.xml</include> </includes> </resource> </resources>
+
+
 		<plugins>
 			<plugin>
 				<artifactId>maven-eclipse-plugin</artifactId>
