--- a/CollaB/src/main/resources/Config/db.properties
+++ b/CollaB/src/main/resources/Config/db.properties
@@ -1,11 +1,11 @@
 #driver = oracle.jdbc.OracleDriver
 driver = net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 #url = jdbc:oracle:thin:@db202202221219_high?TNS_ADMIN=C:/db_test/Wallet_DB202202221219
-url = jdbc:log4jdbc:oracle:thin:@db202202221219_high?TNS_ADMIN=C:/db_test/Wallet_DB202202221219
-user = admin
-password = Ehdrmfkal1!@
+#url = jdbc:log4jdbc:oracle:thin:@db202202221219_high?TNS_ADMIN=C:/db_test/Wallet_DB202202221219
+#user = admin
+#password = Ehdrmfkal1!@
 
 #AWS
-#url = jdbc:oracle:thin:@donggle.cichhjs81b3k.us-east-1.rds.amazonaws.com:1521:ORCL
-#user = donggle
-#password = ehdrmfkal
+url = jdbc:log4jdbc:oracle:thin:@donggle.cichhjs81b3k.us-east-1.rds.amazonaws.com:1521:ORCL
+user = donggle
+password = ehdrmfkal
