--- a/CollaB/src/main/resources/Config/db.properties
+++ b/CollaB/src/main/resources/Config/db.properties
@@ -6,6 +6,6 @@ driver = net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 #password = Ehdrmfkal1!@
 
 #AWS
-url = jdbc:log4jdbc:oracle:thin:@donggle.cichhjs81b3k.us-east-1.rds.amazonaws.com:1521:ORCL
+url = jdbc:log4jdbc:oracle:thin:@aws-donggle.cg22duzil0tg.ap-northeast-2.rds.amazonaws.com:1521:ORCL
 user = donggle
 password = ehdrmfkal
