--- a/CollaB/src/main/resources/Config/db.properties
+++ b/CollaB/src/main/resources/Config/db.properties
@@ -1,11 +1,11 @@
-#driver = oracle.jdbc.OracleDriver
-driver = net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-#url = jdbc:oracle:thin:@db202202221219_high?TNS_ADMIN=C:/db_test/Wallet_DB202202221219
+driver = oracle.jdbc.OracleDriver
+#driver = net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+url = jdbc:oracle:thin:@db202202221219_high?TNS_ADMIN=C:/db_test/Wallet_DB202202221219
 #url = jdbc:log4jdbc:oracle:thin:@db202202221219_high?TNS_ADMIN=C:/db_test/Wallet_DB202202221219
-#user = admin
-#password = Ehdrmfkal1!@
+user = admin
+password = Ehdrmfkal1!@
 
 #AWS
-url = jdbc:log4jdbc:oracle:thin:@aws-donggle.cg22duzil0tg.ap-northeast-2.rds.amazonaws.com:1521:ORCL
-user = donggle
-password = ehdrmfkal
+#url = jdbc:log4jdbc:oracle:thin:@aws-donggle.cg22duzil0tg.ap-northeast-2.rds.amazonaws.com:1521:ORCL
+#user = donggle
+#password = ehdrmfkal
