단위테스트진행중...ㅜ

--- a/CollaB/src/main/resources/Config/db.properties
+++ b/CollaB/src/main/resources/Config/db.properties
@@ -9,3 +9,5 @@ driver = net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 url = jdbc:log4jdbc:oracle:thin:@aws-donggle.cg22duzil0tg.ap-northeast-2.rds.amazonaws.com:1521:ORCL
 user = donggle
 password = ehdrmfkal
+
+upload = /home/ubuntu/apache-tomcat-9.0.59/webapps/cardFile/
