--- a/CollaB/src/main/webapp/WEB-INF/web.xml
+++ b/CollaB/src/main/webapp/WEB-INF/web.xml
@@ -33,6 +33,13 @@
 			<param-name>contextConfigLocation</param-name>
 			<param-value>/WEB-INF/spring/appServlet/*-context.xml</param-value>
 		</init-param>
+		
+		<!-- 페이지 예외처리 -->
+		<init-param>
+			<param-name>throwExceptionIfNoHandlerFound</param-name>
+			<param-value>true</param-value>
+		</init-param>
+		
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
